--- a/portfolio.html
+++ b/portfolio.html
@@ -47,12 +47,7 @@
         <ul class="list">
           <li>
             <a href="" class="link">
-              <img
-                src="./images/img.jpg"
-                alt="пример работы Технокряк"
-                width="370px"
-                height="294px"
-              />
+              <img src="./images/img.jpg" alt="пример работы Технокряк" width="370" height="294" />
               <h2 class="card-header">Технокряк</h2>
               <p class="card-text">Веб-сайт</p>
             </a>
@@ -62,8 +57,8 @@
               <img
                 src="./images/img-1.jpg"
                 alt="пример работы Постер New Orlean vs Golden Star"
-                width="370px"
-                height="294px"
+                width="370"
+                height="294"
               />
               <h2 class="card-header">Постер New Orlean vs Golden Star</h2>
               <p class="card-text">Дизайн</p>
@@ -74,8 +69,8 @@
               <img
                 src="./images/img-2.jpg"
                 alt="пример работы Ресторан Seafood"
-                width="370px"
-                height="294px"
+                width="370"
+                height="294"
               />
               <h2 class="card-header">Ресторан Seafood</h2>
               <p class="card-text">Приложение</p>
@@ -86,8 +81,8 @@
               <img
                 src="./images/img-3.jpg"
                 alt="пример работы Проект Prime"
-                width="370px"
-                height="294px"
+                width="370"
+                height="294"
               />
               <h2 class="card-header">Проект Prime</h2>
               <p class="card-text">Маркетинг</p>
@@ -98,8 +93,8 @@
               <img
                 src="./images/img-4.jpg"
                 alt="пример работы Проект Boxes"
-                width="370px"
-                height="294px"
+                width="370"
+                height="294"
               />
               <h2 class="card-header">Проект Boxes</h2>
               <p class="card-text">Приложение</p>
@@ -110,8 +105,8 @@
               <img
                 src="./images/img-5.jpg"
                 alt="пример работы Inspiration has no Borders"
-                width="370px"
-                height="294px"
+                width="370"
+                height="294"
               />
               <h2 class="card-header">Inspiration has no Borders</h2>
               <p class="card-text">Веб-сайт</p>
@@ -122,8 +117,8 @@
               <img
                 src="./images/img-6.jpg"
                 alt="пример работы Издание Limited Edition"
-                width="370px"
-                height="294px"
+                width="370"
+                height="294"
               />
               <h2 class="card-header">Издание Limited Edition</h2>
               <p class="card-text">Дизайн</p>
@@ -134,8 +129,8 @@
               <img
                 src="./images/img-7.jpg"
                 alt="пример работы Проект LAB"
-                width="370px"
-                height="294px"
+                width="370"
+                height="294"
               />
               <h2 class="card-header">Проект LAB</h2>
               <p class="card-text">Маркетинг</p>
@@ -146,8 +141,8 @@
               <img
                 src="./images/img-8.jpg"
                 alt="пример работы Growing Business"
-                width="370px"
-                height="294px"
+                width="370"
+                height="294"
               />
               <h2 class="card-header">Growing Business</h2>
               <p class="card-text">Приложение</p>
