--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </section>
       <!-- Benefits-section -->
       <section>
-        <h2>Наши преимущества</h2>
+        <h2 class="header-hidden">Наши преимущества</h2>
         <ul class="list">
           <li>
             <h3 class="benefits-header">Внимание к деталям</h3>
@@ -112,7 +112,7 @@
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <a class="link logo" href="">Web<span class="logo-span">Studio</span></a>
       <address>
         <ul class="list">
