--- a/portfolio.html
+++ b/portfolio.html
@@ -151,7 +151,7 @@
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <a class="link logo" href="">Web<span class="logo-span">Studio</span></a>
       <address>
         <ul>
