footer logo color

--- a/portfolio.html
+++ b/portfolio.html
@@ -152,7 +152,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="link logo" href="">Web<span class="logo-span">Studio</span></a>
+      <a class="link logo" href="">Web<span class="white-span">Studio</span></a>
       <address>
         <ul>
           <li class="list">
