--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </section>
       <!-- Benefits-section -->
       <section>
-        <h2 class="header-hidden">Наши преимущества</h2>
+        <h2 class="visually-hidden">Наши преимущества</h2>
         <ul class="list">
           <li>
             <h3 class="benefits-header">Внимание к деталям</h3>
